fixed scrollbar taking space in firefox

--- a/src/nullstyle.scss
+++ b/src/nullstyle.scss
@@ -10,6 +10,7 @@
   margin: 0;
   padding: 0;
   overflow: overlay;
+  scrollbar-width: none;
   -ms-text-size-adjust:  100%;
   -moz-text-size-adjust:  100%;
   -webkit-text-size-adjust:  100%;
